data/test/method_as_function/negative/6001.js
// This tests Bearer authentication, with no API Key provided
const axios = require('axios');
const id = 42
axios.get(`https://petstore.swagger.io/v2/pets-secure/${id}`);